--- a/static/css/checkout.css
+++ b/static/css/checkout.css
@@ -71,6 +71,7 @@ a {
   text-align: left;        /* Ensure text is aligned left */
   width: 65%;
   height: 100%;
+  gap: 0.5rem;
 }
 
 .cart-details h4 {
