--- a/static/css/customer_upload.css
+++ b/static/css/customer_upload.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: "Fredoka", sans-serif;
+  font-family: "Orelega One";
   background: #fbb8cc url("custom-bg.png") no-repeat right bottom;
   background-size: contain;
   color: #7c3b51;
