--- a/static/css/index.css
+++ b/static/css/index.css
@@ -31,7 +31,7 @@ body {
 /* SHOP NOW Button */
 .button-container {
   position: absolute;
-  bottom: 13vh;
+  bottom: 5vh;
   left: 50%;
   transform: translateX(-50%);
   width: min(90%, 320px);
@@ -67,6 +67,8 @@ body {
   }
 
   .button-container {
+    position: absolute;
+    bottom: 13vh;
     height: 48px;
   }
 
