--- a/static/css/custom-finish.css
+++ b/static/css/custom-finish.css
@@ -15,6 +15,7 @@ a {
   text-decoration: none;
 }
 
+
 .overlay {
   /* background-color: rgba(255, 255, 255, 0.8); */
   min-height: 100vh;
@@ -72,7 +73,7 @@ h1 {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   transition: 0.3s;
   cursor: pointer;
-  height: 25vh;
+  height: 30vh;
   width: 25vh;
   display: flex;
   flex-direction: column;
@@ -86,8 +87,9 @@ h1 {
 }
 
 .menu-item img {
-  height: 15vh;
-  margin-bottom: 10px;
+  padding-top: 2rem;
+  height: 13vh;
+  margin-bottom: 5px;
 }
 
 .menu-item p {
