--- a/templates/register.html
+++ b/templates/register.html
@@ -45,6 +45,14 @@
           name="address"
           required
         ></textarea>
+        <select id="size" name="size" required>
+          <option value="" disabled selected>Select Size</option>
+          <option value="XS">XS</option>
+          <option value="S">S</option>
+          <option value="M">M</option>
+          <option value="L">L</option>
+          <option value="XL">XL</option>
+        </select>
         <button type="submit">Order Now</button>
       </form>
     </div>
