--- a/templates/orders.html
+++ b/templates/orders.html
@@ -56,6 +56,7 @@
                 </span>
                 <span>{{ product['instructions'] }}</span>
               </div>
+              <span>Size: {{ order['size'] }}</span>
             </li>
             {% endfor %}
           </ul>
