--- a/templates/register.html
+++ b/templates/register.html
@@ -53,6 +53,7 @@
           <option value="L">L</option>
           <option value="XL">XL</option>
         </select>
+        <a href="{{ url_for('sizes') }}" class="size-guide-btn" target="_blank">📏 View Size Guide</a>
         <button type="submit">Order Now</button>
       </form>
     </div>
