--- a/templates/size-guide.html
+++ b/templates/size-guide.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../static/css/size-guide.css">
+    <link rel="stylesheet" href="../static/css/size-guide.css" />
   </head>
   <body>
     <header>
@@ -30,7 +30,7 @@
         <strong>M:</strong> 1, 5, 4, 6, 8<br />
         <strong>L:</strong> 0, 4, 3, 5, 7<br />
         <strong>XL:</strong> 0, 3, 2, 4, 6
-      </p>  
+      </p>
 
       <div class="sizing-image">
         <img
@@ -39,7 +39,9 @@
         />
       </div>
 
-      <a href="{{ url_for('register') }}" class="back-link">← Back to Home</a>
+      <a href="{{ url_for('register') }}" class="back-link"
+        >← Back to Your Details</a
+      >
     </div>
   </body>
 </html>
